plugins/groovy/testdata/highlighting/duplicateNamesInTheFile/AliasAndAlias.groovy
import java.util.Calendar as Date
<error descr="Name 'Date' is already defined in file">import java.util.Collections as Date</error>